force-app/main/default/objects/B25__ReservationContact__c/B25__ReservationContact__c.object-meta.xml
<CustomObject>
    <description>The default Dimension junction between Reservation and Contact. You can configure your own junctions by going to Dimensions and create a new Dimension junction.</description>
    <label>Reservation Contact</label>
    <nameField>
        <displayFormat>RC-{000000000}</displayFormat>
        <label>Reservation Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reservation Contacts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>