force-app/main/default/objects/B25__ReservationContact__c/fields/B25__CheckedIn__c.field-meta.xml
<CustomField>
    <fullName>B25__CheckedIn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Checked In</label>
    <type>Checkbox</type>
</CustomField>