force-app/main/default/objects/B25__ReservationContact__c/fields/B25__Contact_Lookup__c.field-meta.xml
<CustomField>
    <fullName>B25__Contact_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Reservation Contacts (Contact)</relationshipLabel>
    <relationshipName>Reservation_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>