force-app/main/default/objects/B25__ReservationContact__c/fields/B25__Key__c.field-meta.xml
<CustomField>
    <fullName>B25__Key__c</fullName>
    <externalId>true</externalId>
    <label>Key</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>