force-app/main/default/objects/B25__ReservationContact__c/fields/B25__Notes__c.field-meta.xml
<CustomField>
    <fullName>B25__Notes__c</fullName>
    <description>Additional notes that can be given to be shown on the Reservation form.</description>
    <inlineHelpText>Les remarques supplémentaires qui peuvent être données doivent être indiquées sur le formulaire de réservation.</inlineHelpText>
    <label>Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>