force-app/main/default/objects/B25__ReservationContact__c/fields/B25__Reservation_Lookup__c.field-meta.xml
<CustomField>
    <fullName>B25__Reservation_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reservation</label>
    <referenceTo>B25__Reservation__c</referenceTo>
    <relationshipLabel>Reservation Contacts</relationshipLabel>
    <relationshipName>Reservation_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>